2007-02-08  Michael Natterer  <mitch@gimp.org>

	* app/paint/paint-types.h
	* app/paint/*.h: move opaque typedefs of object instances to
	paint-types.h, don't typedef empty class stuctures as their parent
	class (gtk-doc gets confused), cleanups.

2007-02-08  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangleoptions.c
	* app/widgets/gimppropwidgets.[ch]: moved code around.

2007-02-08  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangleoptions.c (gimp_rectangle_options_gui):
	code cleanup. Pack the widgets the way we usually do this.

2007-02-08  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-scale.c: applied patch from Robert
	Helgesson. Adds documentation (bug #405760).

2007-02-08  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpenumwidgets.c
	(gimp_enum_stock_box_new_with_range): reduced default spacing.

	* app/tools/gimpcurvestool.c (gimp_curves_tool_dialog): don't
	increase the box's spacing.

	* app/tools/gimprectangleoptions.c: added portrait/landscape
	buttons.

	* app/widgets/gimppropwidgets.c (gimp_prop_aspect_ratio_new):
	reduced default width of entry.  Swap width and height when the
	aspect changes and fixed-aspect is chosen.

2007-02-08  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangleoptions.c
	* app/widgets/gimppropwidgets.[ch]: cleaned out some cruft. Still
	work in progress.

2007-02-08  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpratioentry.c (gimp_ratio_entry_set_fraction):
	emit property change notifications.

2007-02-08  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpenumwidgets.c
	(gimp_enum_stock_box_new_with_range): use GTK_RELIEF_NONE for the
	buttons.

2007-02-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/widgets-enums.c
	* libgimpwidgets/gimpwidgetsenums.[ch]: moved enum GimpAspectType
	to libgimpwidgets.

	* libgimpwidgets/gimpratioentry.[ch]: added property "aspect" with
	getters and setters.

	* libgimpwidgets/gimpwidgets.def: updated.
